2010-03-30  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
	This patch adds a new option to PoCC:
	--no-candl: don't run candl for dependence analysis.

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/driver-candl.c,
	* driver/pocc/options.c,
	* driver/src/options.h,
	* driver/src/options.c: Add and manage options --no-candl.

2010-03-30  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
	This patch adds 2 new options to PoCC:
	--default-ctxt: specify that the program parameters are all >=
	32. Use at your own risk!
	--read-scop: read a .scop file instead of a C file as the input.

	* driver/pocc/driver-clastops.c,
	* driver/pocc/include/pocc/options.h,
	* driver/pocc/driver-clan.c,
	* driver/pocc/options.c,
	* driver/pocc/driver-codegen.c,
	* driver/src/options.h,
	* driver/src/options.c: Add and manage options --default-ctxt and
	--read-scop.

2010-03-26  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* bin/pocc-versionsgenerator: Add support for limiting the
	generation of the number of C files by removing all files
	identical to a previously generated one.

2010-03-22  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* doc/versions.txt: New. Sample input file for the flag sequence
	generator.

	* bin/pocc-versionsgenerator: Extend to support tile sizes
	combination. Only iterates on the 3 first dimensions of tiling.

2010-03-21  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* bin/pocc-versionsgenerator: New. Script to invoke PoCC with all
	combinations of flag sequences, given a file containing the flags
	to consider.
	* Makefile.am: Update accordingly.

	* bin/pocc-util.in: Update to support the 'generate-versions'
	command.

2010-03-11  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
	This patch creates and manages options:
	--ac-keep-outer-par: array contraction preserves outer parallel loops
	--ac-keep-vectorized: array contraction preserves inner parallel loops

	* driver/pocc/driver-clastops.c,
	* driver/pocc/include/pocc/options.h,