@@ -269,6 +269,7 @@ pocc_driver_codegen (scoplib_scop_p program,
       poptions->cloog_options = coptions = cloog_options_malloc (cstate);
     }
   coptions->language = 'c';
+
   CloogProgram* cp = cloog_program_scop_to_cloogprogram (program, coptions);
 
   /* (3) Generate polyhedral scanning code with CLooG. */
@@ -278,7 +279,6 @@ pocc_driver_codegen (scoplib_scop_p program,
     coptions->f = poptions->cloog_f;
   if (poptions->cloog_l != POCC_CLOOG_UNDEF)
     coptions->l = poptions->cloog_l;
-
   cp = cloog_program_generate (cp, coptions);
 
   /* (4) Call Clast pretty-print and post-processing. */
