@@ -35,7 +35,7 @@
 # include "getopts.h"
 
 
-# define POCC_NB_OPTS				56
+# define POCC_NB_OPTS				57
 
 
 # define POCC_OPT_HELP				0
@@ -89,16 +89,17 @@
 # define POCC_OPT_VECTORIZER			43
 # define POCC_OPT_VECT_MARK_PAR_LOOPS    	44
 # define POCC_OPT_VECT_NO_KEEP_OUTER_PAR_LOOPS  45
-# define POCC_OPT_STORCOMPACT			46
-# define POCC_OPT_AC_KEEP_OUTERPAR		47
-# define POCC_OPT_AC_KEEP_VECTORIZED		48
-# define POCC_OPT_CODEGEN_TIMERCODE		49
-# define POCC_OPT_CODEGEN_TIMER_ASM		50
-# define POCC_OPT_CODEGEN_TIMER_PAPI		51
-# define POCC_OPT_COMPILE      			52
-# define POCC_OPT_COMPILE_CMD          		53
-# define POCC_OPT_RUN_CMD_ARGS          	54
-# define POCC_OPT_PROGRAM_TIMEOUT        	55
+# define POCC_OPT_VECT_SINK_ALL_LOOPS		46
+# define POCC_OPT_STORCOMPACT			47
+# define POCC_OPT_AC_KEEP_OUTERPAR		48
+# define POCC_OPT_AC_KEEP_VECTORIZED		49
+# define POCC_OPT_CODEGEN_TIMERCODE		50
+# define POCC_OPT_CODEGEN_TIMER_ASM		51
+# define POCC_OPT_CODEGEN_TIMER_PAPI		52
+# define POCC_OPT_COMPILE      			53
+# define POCC_OPT_COMPILE_CMD          		54
+# define POCC_OPT_RUN_CMD_ARGS          	55
+# define POCC_OPT_PROGRAM_TIMEOUT        	56
 
 
 BEGIN_C_DECLS
